--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,25 @@
 a{
   text-decoration: none !important;
 }
+
+@font-face {
+  font-family: Montserrat;
+  src: url('../assets/fonts/Montserrat-Regular.ttf');
+  font-weight: normal;
+  font-style: normal;
+  }
+  
+  @font-face {
+  font-family: Montserrat;
+  src: url('../assets/fonts/Montserrat-Bold.ttf');
+  font-weight: bold;
+  font-style: normal;
+  }
+  
+  @font-face {
+  font-family: Montserrat;
+  src: url('../assets/fonts/Montserrat-SemiBold.ttf');
+  font-weight: 500;
+  font-style: normal;
+  }
+  
