--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+
+
 a{
   text-decoration: none !important;
 }
@@ -22,4 +24,21 @@ a{
   font-weight: 500;
   font-style: normal;
   }
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+      transform: translateY(2rem);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
   
+  .menu {
+    animation: fadeIn 0.2s ease-in-out;
+  }
+*{
+  font-family: Montserrat;
+  font-display: swap;
+}
